--- a/index.less
+++ b/index.less
@@ -1,6 +1,6 @@
 div#app {
 	//--bgImage: url('https://gizmostory.com/wp-content/uploads/2022/01/My-Dress-Up-Darling-Episode-1-The-Magic-Planet.jpg');
-  --bgImage: url('https://i.imgur.com/1L0U60Z.gif');
+  --bgImage: url('https://i.imgur.com/O1wogQY.mp4');
 	--color1: #060606ba;
     // --color2: #060606ba;
     
